fix: brandItem spacing + H2 sizing

--- a/assets/styles/typography.sass
+++ b/assets/styles/typography.sass
@@ -1,3 +1,5 @@
+@import '~/assets/styles/variables.sass'
+
 @font-face
   font-family: 'Francois'
   src: url('~assets/fonts/FrancoisOneRegular.woff2') format('woff2')
@@ -34,6 +36,8 @@ h1
   font-size: 3.5556em
 h2
   font-size: 3em
+  @media screen and ( max-width: $breakpoint-mobile)
+    font-size: 2em
 h3
   font-size: 1.5556em
 p, h5
